--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
   </div>
   <div class="overflow-hidden" style="max-height: 110vh;">
     <div class="container px-5">
-      <img src="/moving-van.jpg" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image" width="700" height="500" loading="lazy"style="margin-bottom:20px">
+      <img src="images/moving-van.jpg" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image" width="700" height="500" loading="lazy"style="margin-bottom:20px">
     </div>
   </div>
 </div>
