--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     <div class="feature col">
       <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
         <svg class="bi" width="1em" height="1em"><use xlink:href="#toggles2"></use></svg>
-        <img src="/images/chat-square-heart.svg?sanitize=true" style="height: 30px; margin-right:15px;">
+        <img src="/images/chat-square-heart.svg" style="height: 30px; margin-right:15px;">
       </div>
       <h3 class="fs-2 text-body-emphasis">Personal Touch</h3>
       <p>At our core, we believe that moving should be an exciting and positive experience, not a stressful one. By providing exceptional moving services in the US, we hope to revolutionize the way people think about moving and provide a better, more personalized experience for our customers. Contact us today to learn more about how we can help you with your next move.</p>
