--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     </div>
     <div class="feature col">
       <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">        
-        <img src="images/moving-van.jpg" style="height: 30px;">
+        <img src="images/bus-front.svg" style="height: 30px;">
       </div>
       <h3 class="fs-2 text-body-emphasis">Countrywide</h3>
       <p>We offer a range of services to suit your individual needs, whether you're moving locally or across the country. Our team can handle everything from packing and loading to unloading and unpacking, so you can focus on settling into your new home. And with our transparent pricing and no hidden fees, you can trust that you're getting a fair and competitive rate for our services.
@@ -148,7 +148,7 @@
     <div class="feature col">
       <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
         <svg class="bi" width="1em" height="1em"><use xlink:href="#toggles2"></use></svg>
-        <img src="/images/chat-square-heart.svg" style="height: 30px; margin-right:15px;">
+        <img src="images/chat-square-heart.svg" style="height: 30px; margin-right:15px;">
       </div>
       <h3 class="fs-2 text-body-emphasis">Personal Touch</h3>
       <p>At our core, we believe that moving should be an exciting and positive experience, not a stressful one. By providing exceptional moving services in the US, we hope to revolutionize the way people think about moving and provide a better, more personalized experience for our customers. Contact us today to learn more about how we can help you with your next move.</p>
